--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: 'Jost',sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+    z-index: 10001 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.gradientBg{
+    background: linear-gradient(99deg, #CDC9C3 100%, #dccfbe 0%);
+}
+
+.btnHome{
+    @apply py-5 px-12 bg-[#555555] font-semibold text-white text-lg rounded hover:bg-[#726a6a] transition-all duration-300;
+    
+}
+
+.menu-enter {
+    opacity: 0;
+    transform: translateX(-100%);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .menu-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 300ms, transform 300ms;
   }
-  to {
-    transform: rotate(360deg);
+  .menu-exit {
+    opacity: 1;
+    transform: translateX(0);
   }
-}
+  .menu-exit-active {
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: opacity 300ms, transform 300ms;
+  }
+
+  .menu-link {
+    display: block;
+    padding: 10px 20px;
+    margin: 5px 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    transition: background-color 250ms ease-in-out, transform 250ms ease-in-out;
+    text-decoration: none;
+  }
+
+  .menu-link:hover, .menu-link:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: translateX(5px);
+    text-decoration: none;
+  }
